/*
 * index_metadata.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record;
import "google/protobuf/descriptor.proto";

option java_outer_classname = "IndexMetaDataProto";

message IndexMetaData {
    optional int32 state = 1;                // Represents the state of an index (READABLE = 0, WRITE_ONLY = 1, DISABLED = 2)
    optional int32 rebuildReason = 2;        // The rebuild reason of an index (See RebuildIndexReason enum).
    optional int64 stateChangeTime = 3;      // The time at which the index was set to this state.
    optional int32 buildAttemptsCount = 4;   // Total number of times the index was rebuilt.
    optional int64 latestBuildStartTime = 5; // The latest build start time.
    optional int64 lastBuildCompleteTime = 6;        // The last build complete time.
}

